export const snapshot = {};

snapshot[`assertSnapshot() 1`] = `
{
  a: 1,
  b: 2,
}
`;

snapshot[`assertSnapshot() 2`] = `
TestClass {
  a: 1,
  b: 2,
}
`;

snapshot[`assertSnapshot() 3`] = `
Map(3) {
  "Hello" => "World!",
  1 => 2,
  [Function (anonymous)] => "World!",
}
`;

snapshot[`assertSnapshot() 4`] = `
Set(3) {
  1,
  2,
  3,
}
`;

snapshot[`assertSnapshot() 5`] = `
{
  fn: [Function: fn],
}
`;

snapshot[`assertSnapshot() 6`] = `[Function: fn]`;

snapshot[`assertSnapshot() 7`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`assertSnapshot() 8`] = `"hello world"`;

snapshot[`assertSnapshot() - step 1`] = `
{
  a: 1,
  b: 2,
}
`;

snapshot[`assertSnapshot() - step > nested 1`] = `
TestClass {
  a: 1,
  b: 2,
}
`;

snapshot[`assertSnapshot() - step > nested 2`] = `
Map(3) {
  "Hello" => "World!",
  1 => 2,
  [Function (anonymous)] => "World!",
}
`;

snapshot[`assertSnapshot() - step > nested > double-nested 1`] = `
Set(3) {
  1,
  2,
  3,
}
`;

snapshot[`assertSnapshot() - step > nested > double-nested 2`] = `
{
  fn: [Function: fn],
}
`;

snapshot[`assertSnapshot() - step > nested > double-nested 3`] = `[Function: fn]`;

snapshot[`assertSnapshot() - step > nested 3`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`assertSnapshot() - step 2`] = `"hello world"`;

snapshot[`assertSnapshot() - adverse string \\ \` \${} 1`] = `"\\\\ \` \${}"`;

snapshot[`assertSnapshot() - default serializer 1`] = `
"a
b	c"
`;

snapshot[`assertSnapshot() - multi-line strings > string 1`] = `
"
<html>
  <head>
    <title>Snapshot Test - Multi-Line Strings</title>
  </head>
  <body>
    <h1>
      Snapshot Test - Multi-Line Strings
    </h2>
    <p>
      This is a snapshot of a multi-line string.
    </p>
  </body>
</html>"
`;

snapshot[`assertSnapshot() - multi-line strings > string in array 1`] = `
[
  "
<h1>
  Header
</h1>",
  "
<p>
  Content
</p>",
]
`;

snapshot[`assertSnapshot() - multi-line strings > string in object 1`] = `
{
  str: "
        Line #1
        Line #2
        Line #3",
}
`;

snapshot[`assertSnapshot() - failed assertion > object 1`] = `
"Snapshot does not match:


    [Diff] Actual / Expected


    [
      1,
      2,
+     3,
    ]
"
`;

snapshot[`assertSnapshot() - failed assertion > string 1`] = `
'Snapshot does not match:


    [Diff] Actual / Expected


-   "Hello!"
+   "Hello World!"

'
`;

snapshot[`custom name 1`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`custom name 2`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`assertSnapshot() - options > serializer 1`] = `
Array Length: 3

[
  1,
  2,
  3,
]
`;

snapshot[`assertSnapshot() - options > msg > missing snapshot 1`] = `"[CUSTOM ERROR MESSAGE - MISSING SNAPSHOT]"`;

snapshot[`assertSnapshot() - options > msg > missing snapshot file 1`] = `"[CUSTOM ERROR MESSAGE - MISSING SNAPSHOT]"`;

snapshot[`assertSnapshot() - options > mode 1`] = `
"
[
  1,
  2,
  3,
]
"
`;

snapshot[`assertSnapshot() - options > mode 2`] = `
"running 1 test from <tempDir>/test.ts
snapshot ... ok (--ms)
------- post-test output -------

 > 1 snapshot updated.
----- post-test output end -----

ok | 1 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - update - New snapshot 1`] = `
"running 1 test from <tempDir>/test.ts
assertSnapshot() - update ... ok (--ms)
------- post-test output -------

 > 1 snapshot updated.
----- post-test output end -----

ok | 1 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - update - New snapshot 2`] = `
"export const snapshot = {};

snapshot[\`assertSnapshot() - update 1\`] = \`
[
  1,
  2,
]
\`;
"
`;

snapshot[`assertSnapshot() - update - Existing snapshot - no changes 1`] = `
"running 1 test from <tempDir>/test.ts
assertSnapshot() - update ... ok (--ms)

ok | 1 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - update - Existing snapshot - no changes 2`] = `
"export const snapshot = {};

snapshot[\`assertSnapshot() - update 1\`] = \`
[
  1,
  2,
]
\`;
"
`;

snapshot[`assertSnapshot() - update - Existing snapshot - updates 1`] = `
"running 1 test from <tempDir>/test.ts
assertSnapshot() - update ... ok (--ms)
------- post-test output -------

 > 1 snapshot updated.
----- post-test output end -----

ok | 1 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - update - Existing snapshot - updates 2`] = `
"export const snapshot = {};

snapshot[\`assertSnapshot() - update 1\`] = \`
[
  1,
  2,
  3,
  5,
]
\`;
"
`;

snapshot[`assertSnapshot() - update - Existing snapshots - reverse order 1 1`] = `
"running 2 tests from <tempDir>/test.ts
Snapshot Test - First ... ok (--ms)
Snapshot Test - Second ... ok (--ms)
------- post-test output -------

 > 2 snapshots updated.

 > 1 snapshot removed.
   • assertSnapshot() - update 1
----- post-test output end -----

ok | 2 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - update - Existing snapshots - reverse order 1 2`] = `
'export const snapshot = {};

snapshot[\`Snapshot Test - First 1\`] = \`"FIRST"\`;

snapshot[\`Snapshot Test - Second 1\`] = \`"SECOND"\`;
'
`;

snapshot[`assertSnapshot() - update - Existing snapshots - reverse order 2 1`] = `
"running 2 tests from <tempDir>/test.ts
Snapshot Test - Second ... ok (--ms)
Snapshot Test - First ... ok (--ms)

ok | 2 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - update - Existing snapshots - reverse order 2 2`] = `
'export const snapshot = {};

snapshot[\`Snapshot Test - Second 1\`] = \`"SECOND"\`;

snapshot[\`Snapshot Test - First 1\`] = \`"FIRST"\`;
'
`;

snapshot[`assertSnapshot() - remove - New snapshot 1`] = `
"running 5 tests from <tempDir>/test.ts
assertSnapshot() - remove - First ... ok (--ms)
assertSnapshot() - remove - Second ... ok (--ms)
assertSnapshot() - remove - Third ... ok (--ms)
assertSnapshot() - remove - Fourth ... ok (--ms)
assertSnapshot() - remove - Fifth ... ok (--ms)
------- post-test output -------

 > 5 snapshots updated.
----- post-test output end -----

ok | 5 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - remove - Existing snapshot - removed one 1`] = `
"running 4 tests from <tempDir>/test.ts
assertSnapshot() - remove - First ... ok (--ms)
assertSnapshot() - remove - Second ... ok (--ms)
assertSnapshot() - remove - Fourth ... ok (--ms)
assertSnapshot() - remove - Fifth ... ok (--ms)
------- post-test output -------

 > 1 snapshot removed.
   • assertSnapshot() - remove - Third 1
----- post-test output end -----

ok | 4 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - remove - Existing snapshot - removed several 1`] = `
"running 1 test from <tempDir>/test.ts
assertSnapshot() - remove - First ... ok (--ms)
------- post-test output -------

 > 3 snapshots removed.
   • assertSnapshot() - remove - Second 1
   • assertSnapshot() - remove - Fourth 1
   • assertSnapshot() - remove - Fifth 1
----- post-test output end -----

ok | 1 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - different directory - New snapshot 1`] = `
"running 2 tests from <tempDir>/test.ts
Snapshot Test - First ... ok (--ms)
Snapshot Test - Second ... ok (--ms)
------- post-test output -------

 > 2 snapshots updated.
----- post-test output end -----
running 2 tests from <tempDir>/test.ts
Snapshot Test - First ... ok (--ms)
Snapshot Test - Second ... ok (--ms)
------- post-test output -------

 > 2 snapshots updated.
----- post-test output end -----

ok | 4 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - different directory - Existing snapshot - update 1`] = `
"running 2 tests from <tempDir>/test.ts
Snapshot Test - First ... ok (--ms)
Snapshot Test - Second ... ok (--ms)
------- post-test output -------

 > some snapshots updated.
----- post-test output end -----
running 2 tests from <tempDir>/test.ts
Snapshot Test - First ... ok (--ms)
Snapshot Test - Second ... ok (--ms)
------- post-test output -------

 > some snapshots updated.
----- post-test output end -----

ok | 4 passed | 0 failed (--ms)

"
`;

snapshot[`assertSnapshot() - regression #2140 1`] = `
{
  content: "
      <h1>Testing a page</h1>
      <p>This is a test</p>
      <ul>
        <li>1</li>
        <li>2</li>
        <li>3</li>
        <li>4</li>
      </ul>
      ",
  title: "Testing a page",
}
`;

snapshot[`assertSnapshot() - regression #2144 1`] = `
{
  fmt: {
    files: {
      exclude: [],
      include: [],
    },
    options: {},
  },
}
`;

snapshot[`assertSnapshot() - empty #2245 1`] = ``;

snapshot[`createAssertSnapshot() > no options 1`] = `This green text has had it's colours stripped`;

snapshot[`createAssertSnapshot() - options object - custom name 1`] = `This green text has had it's colours stripped`;

snapshot[`createAssertSnapshot() > message 1`] = `"This snapshot has failed as expected"`;

snapshot[`createAssertSnapshot() - composite - custom Name 1`] = `This green text has had it's colours stripped`;

snapshot[`assertSnapshot() - regression #5155 1`] = `
"running 1 test from <tempDir>/test.ts
Snapshot Test ... FAILED (--ms)

 ERRORS 
error: PermissionDenied: Missing write access to snapshot file (file://<path>). This is required because assertSnapshot was called in update mode. Please pass the --allow-write flag.
        throw new Deno.errors.PermissionDenied(
              ^
 FAILURES 

FAILED | 0 passed | 1 failed (--ms)

"
`;

snapshot[`assertSnapshot() - should work with the string with '\\r' character 1`] = `
"Hello\\r
World!\\r
"
`;
